fix overflow form

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -19,7 +19,7 @@ body {
   padding: 20px;
 }
 .mobile-download{
-  width: 380px;
+  max-width: 340px;
   padding: 20px;
 }
 section{
